SUBDIRS =  DataStore Module DSO Event System

perlmodsdir = ${PERL_VENDORLIB}/Warewulf

dist_perlmods_SCRIPTS = ACVars.pm Config.pm Daemon.pm DataStore.pm Logger.pm Object.pm ObjectSet.pm Util.pm Module.pm ModuleLoader.pm Term.pm Event.pm EventHandler.pm Network.pm DSO.pm System.pm SystemFactory.pm ParallelCmd.pm Node.pm File.pm RetVal.pm Timer.pm Init.pm

MAINTAINERCLEANFILES = Makefile.in

