wwmkchrootdir = $(libexecdir)/warewulf/wwmkchroot

dist_wwmkchroot_SCRIPTS = centos-6.tmpl centos-7.tmpl include-rhel sl-7.tmpl functions include-deb debian-8.tmpl debian7-32.tmpl debian7-64.tmpl golden-system.tmpl include-suse opensuse-42.3.tmpl opensuse-15.3.tmpl opensuse-tumbleweed.tmpl sles-12.tmpl sle-15.tmpl include-ubuntu ubuntu-16.04.tmpl ubuntu-18.04.tmpl centos-8.tmpl sles-15.tmpl include-openEuler openeuler-22.03.tmpl
 

MAINTAINERCLEANFILES = Makefile.in

